@@ -6,7 +6,7 @@ use Sub::Exporter -setup => {
 	exports => [
       qw( COL_INFO_TYPE_ATTR COLUMN_ALIAS COLUMN_META COLUMN_META_CONFIG
           ENCODE_ENTITIES EXCEPTION_CLASS EXTENSION_TYPE FALSE INDENT_CHARS
-          ITERATOR_DOWNLOAD_KEY QUERY_KEY RENDERER_CLASS RENDERER_PREFIX
+          ITERATOR_DOWNLOAD_KEY NUL QUERY_KEY RENDERER_CLASS RENDERER_PREFIX
           SERIALISE_COLUMN_ATTR SERIALISE_TABLE_KEY SERIALISE_TABLE_VIEW
           SPC TABLE_META TABLE_META_CONFIG TRIGGER_CLASS TRUE TYPE_EXTENSION )
       ],
@@ -70,6 +70,8 @@ sub FALSE () { 0 }
 sub INDENT_CHARS () { q() }
 
 sub ITERATOR_DOWNLOAD_KEY () { '_iterator_download' }
+
+sub NUL () { q() }
 
 sub QUERY_KEY () { 'table_name' }
 
